--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.12",
-    "node": "^17.0.1"
+    "node": "^17.0.1",
+    "nodemon": "^2.0.14"
   }
 }
